[gd_scene load_steps=10 format=3 uid="uid://dprx4lcgks3dy"]

[ext_resource type="Script" path="res://source/gameplay/player_character.gd" id="1_sf3a8"]
[ext_resource type="ArrayMesh" uid="uid://bw7qbbvgdukkk" path="res://assets/models/snow_gun.mesh" id="1_v7ulw"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_fmf8d"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_j54vs"]
shading_mode = 0

[sub_resource type="BoxMesh" id="BoxMesh_5cy5f"]
size = Vector3(0.1, 0.1, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y2phi"]
shading_mode = 0

[sub_resource type="Animation" id="Animation_ojkkj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head/snow_gun:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.39626, 3.14159, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("head/right_hand:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.349066, 0.610865, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("head/left_hand:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.349066, -0.610865, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("head/snow_gun:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.125, -0.5)]
}

[sub_resource type="Animation" id="Animation_je3op"]
resource_name = "shoot"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head/snow_gun:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(1.39626, 3.14159, 0), Vector3(0.872664, 3.14159, 1.53271e-07), Vector3(1.39626, 3.14159, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("head/right_hand:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.349066, 0.610865, 0), Vector3(0.55812, 0.688536, 0.175916), Vector3(0.349066, 0.610865, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("head/left_hand:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.349066, -0.610865, 0), Vector3(0.55812, -0.688536, -0.175916), Vector3(0.349066, -0.610865, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("head/snow_gun:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, -0.125, -0.5), Vector3(0, 0.025, -0.4), Vector3(0, -0.125, -0.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mwite"]
_data = {
"RESET": SubResource("Animation_ojkkj"),
"shoot": SubResource("Animation_je3op")
}

[node name="player_character" type="CharacterBody3D"]
script = ExtResource("1_sf3a8")

[node name="shape" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_fmf8d")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)

[node name="camera" type="Camera3D" parent="head"]
current = true

[node name="snow_gun" type="MeshInstance3D" parent="head"]
transform = Transform3D(-0.035, 8.73834e-08, 1.54084e-08, 0, 0.00607781, -0.0344683, -8.87314e-08, -0.0344683, -0.00607781, 0, -0.125, -0.5)
mesh = ExtResource("1_v7ulw")

[node name="snow_ball_spawn" type="Marker3D" parent="head/snow_gun"]
transform = Transform3D(1, 1.42109e-14, 2.4869e-14, 1.42109e-14, 1, 1.19209e-07, -1.42109e-14, -1.19209e-07, 1, 2.56582e-06, 19.9442, 2.06609)

[node name="right_hand" type="MeshInstance3D" parent="head"]
transform = Transform3D(0.819152, 0.196175, 0.538985, 0, 0.939693, -0.34202, -0.573576, 0.280167, 0.769751, 0.2, -0.3, -0.2)
material_override = SubResource("StandardMaterial3D_j54vs")
mesh = SubResource("BoxMesh_5cy5f")

[node name="left_hand" type="MeshInstance3D" parent="head"]
transform = Transform3D(0.819152, -0.196175, -0.538985, 0, 0.939693, -0.34202, 0.573576, 0.280167, 0.769751, -0.2, -0.3, -0.2)
material_override = SubResource("StandardMaterial3D_y2phi")
mesh = SubResource("BoxMesh_5cy5f")

[node name="animation_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mwite")
}
